--- a/Django_cont/icoder/templates/blog/blogpost.html
+++ b/Django_cont/icoder/templates/blog/blogpost.html
@@ -1,6 +1,9 @@
 {% extends 'base.html' %}{% load static %}{% load humanize %}{% load extras %}
 {% block title %} blogpost {% endblock title %} 
 {% block blogactive %} active {% endblock blogactive %} {% block body %}
+{% load static %}
+{% load humanize %}
+{% load extras %}
 
 <div class="container my-3">
   <div class="blog-post">
@@ -48,12 +51,7 @@
       {% for comment in comments %}
       <div class="row my-3">
         <div class="col-md-1">
-          <img
-            src="{% static 'img/user.jpg' %}"
-            alt="user"
-            width="45"
-            height="45"
-          />
+           <img src="{{ comment.user|get_profile_pic }}" alt="User Pic" height="40" width="40" style="border-radius: 50%;">
         </div>
         <div class="col-md-11">
           <b>{{comment.user.username}}</b>
@@ -106,11 +104,24 @@
                   </button>
                 </form>
               </div>
-              <div class="replies bg-danger my-2">
-                {% for reply in replydict|get_item:comment.sno %}
-                    {{ reply }}
-                {% endfor %}
-              </div>
+              
+             <div class="replies ms-5 mt-2 p-2 bg-light rounded border">
+    {% for reply in replydict|get_item:comment.sno %}
+    <div class="row my-2">
+        <div class="col-md-1">
+            <img src="{{ reply.user.userprofile.profile_pic.url }}" width="35" height="35" style="border-radius: 50%;" alt="Reply User Pic">
+        </div>
+        <div class="col-md-11">
+            <b>{{ reply.user.username }}</b>
+            <span class="text-muted badge text-bg-light" style="font-size: small">
+                {{ reply.timestamp|naturaltime }}
+            </span>
+            <div>{{ reply.comment }}</div>
+        </div>
+    </div>
+    {% endfor %}
+</div>
+
             </div>
           </div>
         </div>
