--- a/Django_cont/icoder/templates/base.html
+++ b/Django_cont/icoder/templates/base.html
@@ -64,7 +64,7 @@
           <li class="nav-item dropdown">
            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                     {% csrf_token %} 
-                <img src="{% if user.userprofile.profile_pic %}{{ user.userprofile.profile_pic.url }}{% else %}/media/profile_pics/default_user.png{% endif %}" 
+                <img src="{% if user.profile.profile_pic %}{{ user.profile.profile_pic.url }}{% else %}/media/profile_pics/default_user.png{% endif %}" 
                  alt="Profile" width="30" height="30" class="rounded-circle me-2">
                 
                  Welcome {{ user.username }}
@@ -170,7 +170,7 @@
           </div>
           <div class="modal-body">
             <form action='/login/' method='post'>
-              {% csrf_token %}
+               {% csrf_token %}  
             <div>
               <label for="loginusername">username</label>
               <input type="text" id="loginusername" name="loginusername" placeholder="Enter your username" class="form-control m-2" required>
