--- a/Django_cont/icoder/templates/blog/blogpost.html
+++ b/Django_cont/icoder/templates/blog/blogpost.html
@@ -109,7 +109,7 @@
     {% for reply in replydict|get_item:comment.sno %}
     <div class="row my-2">
         <div class="col-md-1">
-            <img src="{{ reply.user.userprofile.profile_pic.url }}" width="35" height="35" style="border-radius: 50%;" alt="Reply User Pic">
+            <img src="{{ reply.user.profile.profile_pic.url }}" width="35" height="35" style="border-radius: 50%;" alt="Reply User Pic">
         </div>
         <div class="col-md-11">
             <b>{{ reply.user.username }}</b>
